Provided some space after the "remove link" so in Spanish and French the label doesn't overlap with the remove link. See cmn 89 of issue 878.

--- a/trunk/gbif-ipt/src/main/webapp/styles/main.css
+++ b/trunk/gbif-ipt/src/main/webapp/styles/main.css
@@ -717,7 +717,7 @@ div.item {
 }
 div.item div.right {
   margin-top: 10px;
-  margin-bottom: -25px;
+  margin-bottom: 0px;
 }
 div.tempo {
   padding-bottom: 30px;
